# cppfst

./: .gitignore  CMakeLists.txt  README.md
ext/lz4/: CMakeLists.txt
ext/zstd/: CMakeLists.txt
external_demo/: CMakeLists.txt  main.cpp
include/: IntegerMethods.h  blockstreamer_v2.h  byte_v12.h  byteblock_v13.h  character_v6.h  columnfactory.h  compression.h  compressor.h  double_v9.h  factor_v7.h  fst_db.h  fstcompressor.h  fstdefines.h  fsthash.h  fststore.h  fststreamer.h  fsttable.h  ibyteblockcolumn.h  icolumnfactory.h  ifstcolumn.h  ifsttable.h  integer64_v11.h  integer_v8.h  istringwriter.h  itypefactory.h  logical_v10.h  openmphelper.h  typefactory.h
script/: read_test.R
src/fst/: CMakeLists.txt
src/fst/blockstreamer/: blockstreamer_v2.cpp
src/fst/byte/: byte_v12.cpp
src/fst/byteblock/: byteblock_v13.cpp
src/fst/character/: character_v6.cpp
src/fst/compression/: compression.cpp  compressor.cpp
src/fst/double/: double_v9.cpp
src/fst/factor/: factor_v7.cpp
src/fst/integer/: integer_v8.cpp
src/fst/integer64/: integer64_v11.cpp
src/fst/interface/: fststore.cpp  openmphelper.cpp
src/fst/logical/: logical_v10.cpp
src/play/: CMakeLists.txt  read.cpp  read_fst.cpp  write.cpp
